--- a/ios_settings.json
+++ b/ios_settings.json
@@ -1,7 +1,17 @@
 {
-    "desc": "成功",
-    "result": 0,
-    "body": {
-      "hide_versions": ""
-    }
+	"desc": "成功",
+	"result": 0,
+	"body": {
+		"hide_versions": ""
+	},
+	"config": {
+		"msyk_clientId_pro": "AALd72aM",
+		"msyk_clientId_test": "3gTwLT5K",
+		"msyk_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course8",
+		"msyk_pathUr_subject": "/eduselfapp/interface/study/index/8",
+		"kdjj_clientId_pro": "fK3EWdbi",
+		"kdjj_clientId_test": "AALd72aM",
+		"kdjj_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course9",
+		"kdjj_pathUrl_subject": "/eduselfapp/interface/study/index/9"
+	}
 }
