--- a/ios_settings.json
+++ b/ios_settings.json
@@ -12,6 +12,11 @@
 		"kdjj_clientId_pro": "fK3EWdbi",
 		"kdjj_clientId_test": "AALd72aM",
 		"kdjj_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course9",
-		"kdjj_pathUrl_subject": "/eduselfapp/interface/study/index/9"
+		"kdjj_pathUrl_subject": "/eduselfapp/interface/study/index/9",
+		"msdx_clientId_pro": "YBh9FoYi",
+		"msdx_clientId_test": "YBh9FoYi",
+		"msdx_pathUrl": "/edumsdx/oauth/oauth_callback/h5msdx",
+		"mxzy_pathUrl_pro": "http://ydmxm.pt.zxxk.com/OAuth/Redirect.aspx",
+		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx"
 	}
 }
