--- a/ios_settings.json
+++ b/ios_settings.json
@@ -8,7 +8,7 @@
 		"msyk_clientId_pro": "AALd72aM",
 		"msyk_clientId_test": "3gTwLT5K",
 		"msyk_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course8",
-		"msyk_pathUr_subject": "/eduselfapp/interface/study/index/8",
+		"msyk_pathUrl_subject": "/eduselfapp/interface/study/index/8",
 		"kdjj_clientId_pro": "fK3EWdbi",
 		"kdjj_clientId_test": "AALd72aM",
 		"kdjj_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course9",
