--- a/ios_settings.json
+++ b/ios_settings.json
@@ -2,16 +2,16 @@
 	"desc": "成功",
 	"result": 0,
 	"body": {
-		"hide_versions": "2.2.4.3"
+		"hide_versions": ""
 	},
 	"config": {
 		"msyk_clientId_pro": "AALd72aM",
 		"msyk_clientId_test": "3gTwLT5K",
-		"msyk_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course8",
+		"msyk_pathUrl": "/eduxdf/oauth/oauth_callback/msykh5",
 		"msyk_pathUrl_subject": "/eduselfapp/interface/study/index/8",
 		"kdjj_clientId_pro": "fK3EWdbi",
 		"kdjj_clientId_test": "AALd72aM",
-		"kdjj_pathUrl": "/eduselfapp/oauth/oauth_callback/h5course9",
+		"kdjj_pathUrl": "/eduxdf/oauth/oauth_callback/kdjjh5",
 		"kdjj_pathUrl_subject": "/eduselfapp/interface/study/index/9",
 		"msdx_clientId_pro": "YBh9FoYi",
 		"msdx_clientId_test": "YBh9FoYi",
