--- a/ios_settings.json
+++ b/ios_settings.json
@@ -17,6 +17,10 @@
 		"msdx_clientId_test": "YBh9FoYi",
 		"msdx_pathUrl": "/edumsdx/oauth/oauth_callback/h5msdx",
 		"mxzy_pathUrl_pro": "http://ydmxm.pt.zxxk.com/OAuth/Redirect.aspx",
-		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx"
+		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx",
+                "ctb_clientId_pro": "RzgOt0mi",
+		"ctb_clientId_test": "7cvP3rve",
+		"ctb_pathUrl_pro": "https://note.andedu.net:8888/",
+		"ctb_pathUrl_test": "http://frontend.mistakenote-edu-m.xuebadev.com/"
 	}
 }
