--- a/ios_settings.json
+++ b/ios_settings.json
@@ -20,7 +20,7 @@
 		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx",
                 "ctb_clientId_pro": "RzgOt0mi",
 		"ctb_clientId_test": "7cvP3rve",
-		"ctb_pathUrl_pro": "https://note.andedu.net:8888/",
+		"ctb_pathUrl_pro": "https://note.andedu.net/",
 		"ctb_pathUrl_test": "http://frontend.mistakenote-edu-m.xuebadev.com/"
 	}
 }
