--- a/ios_settings.json
+++ b/ios_settings.json
@@ -19,7 +19,7 @@
 		"mxzy_pathUrl_pro": "http://ydmxm.pt.zxxk.com/OAuth/Redirect.aspx",
 		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx",
                 "ctb_clientId_pro": "RzgOt0mi",
-		"ctb_clientId_test": "7cvP3rve",
+		"ctb_clientId_test": "IqTbYDh4",
 		"ctb_pathUrl_pro": "https://note.andedu.net/",
 		"ctb_pathUrl_test": "http://frontend.mistakenote-edu-m.xuebadev.com/"
 	}
