--- a/ios_settings.json
+++ b/ios_settings.json
@@ -2,7 +2,7 @@
 	"desc": "成功",
 	"result": 0,
 	"body": {
-		"hide_versions": ""
+		"hide_versions": "2.2.7.7"
 	},
 	"config": {
 		"msyk_clientId_pro": "AALd72aM",
