--- a/ios_settings.json
+++ b/ios_settings.json
@@ -16,7 +16,7 @@
 		"msdx_clientId_pro": "YBh9FoYi",
 		"msdx_clientId_test": "YBh9FoYi",
 		"msdx_pathUrl": "/edumsdx/oauth/oauth_callback/h5msdx",
-		"mxzy_pathUrl_pro": "http://ydmxm.pt.zxxk.com/OAuth/Redirect.aspx",
+		"mxzy_pathUrl_pro": "http://edu.10086.cn/edumxzy/h5mxzy/h5index?userId=1&phaseStudy=1&provinceId=1",
 		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx",
                 "ctb_clientId_pro": "RzgOt0mi",
 		"ctb_clientId_test": "IqTbYDh4",
