--- a/ios_settings.json
+++ b/ios_settings.json
@@ -17,7 +17,11 @@
 		"msdx_clientId_test": "YBh9FoYi",
 		"msdx_pathUrl": "/edumsdx/oauth/oauth_callback/h5msdx",
 		"mxzy_pathUrl_pro": "http://edu.10086.cn/edumxzy/h5mxzy/h5index?userId=1&phaseStudy=1&provinceId=1",
-		"mxzy_pathUrl_test": "http://ydmxmtest.pt.zxxk.com/OAuth/Redirect.aspx",
+		"mxzy_pathUrl_test": "/jqmxzy/h5mxzy/h5index",
+		"mxzy_clientId_pro": "3qBT2ueS",
+		"mxzy_clientId_test": "3qBT2ueS",
+		"mxzy_pathUrl_oauth_pro": "/jqmxzy/oauth/oauth_callback/h5mxzyjq",
+		"mxzy_pathUrl_oauth_test": "/jqmxzy/oauth/oauth_callback/h5mxzyjq",
                 "ctb_clientId_pro": "RzgOt0mi",
 		"ctb_clientId_test": "IqTbYDh4",
 		"ctb_pathUrl_pro": "https://note.andedu.net/",
