--- a/ios_settings.json
+++ b/ios_settings.json
@@ -1,6 +1,6 @@
 {
   "body" : {
-    "hide_versions" : ""
+    "hide_versions" : "2.3.8.6"
   },
   "config" : {
     "ctb_clientId_pro" : "RzgOt0mi",
